# observe-http-sender-python

./: .gitignore  README.md  __init__.py  example-postcsv.py  observe_http_sender.py  pyproject.toml  setup.py
config/: requirements.txt
data/: sample-authevents.csv
